--- a/mainstyles.css
+++ b/mainstyles.css
@@ -1,11 +1,11 @@
 body {
-background-color: #20207f; //dark blue, close to space blue
+background-color: #20207f; /*dark blue, close to space blue*/
 }
 
 h1{
 color:aliceblue;
  text-align:center;
-//add margin?
-//add padding?
+/*add margin?*/
+/*add padding?*/
 
 }
